--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -34,7 +34,8 @@
         }
 
         .Flist::-webkit-scrollbar-thumb {
-            background-color: white;
+            background-color: gray;
+            border-radius: 15px;
         }
 
         .Flist::-webkit-scrollbar-track {
