--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -34,7 +34,7 @@
         }
 
         .Flist::-webkit-scrollbar-thumb {
-            background-color: gray;
+            background-color: rgb(192, 192, 192);
             border-radius: 15px;
         }
 
