--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -131,8 +131,13 @@
         }
 
         .modal-body>form span{
-            font-size: 0.8rem;
+            font-size: 0.9rem;
         }
+
+        .modal-body>form>div{
+            margin-bottom : 15px;
+        }
+
 
     </style>
 
@@ -143,7 +148,7 @@
 
         <div class="loginform">
 
-            <form action="/login" method="post" onsubmit="return validateLoginForm()">
+            <form action="/login" method="post" onsubmit="return validateLoginForm()" >
                 <div class="logo">
                     <img src="images/logo.png" class="nlogoimg" max-width="100%" height="30"/>
                 </div>
@@ -203,60 +208,51 @@
             <div class="modal-body">
 
                 <form name="joinform" action="/join" method="post" onsubmit="return false">
-                    <br/>
                     <span for="emailInput">이메일</span>
                     <div style="display: flex;">
-                        <input name="email" id="emailInput" class="form-control" style="font-size : 0.7rem;">
-                        <button class="btn btn-secondary jung-btn" onclick="checkDuplicate('emailInput')" style="width : 160px; font-size: 0.7rem; margin-left : 17px;">중복체크</button>
+                        <input name="email" id="emailInput" class="form-control" style="font-size : 0.8rem;">
+                        <button class="btn btn-secondary jung-btn" onclick="checkDuplicate('emailInput')" style="width : 160px; font-size: 0.8rem; margin-left : 17px;">중복체크</button>
                     </div>
-                    <br/>
 
                     <span for="passwordInput">비밀번호</span>
                     <div>
-                        <input name="password" type="password" id="passwordInput" class="form-control" style="font-size : 0.7rem;">
+                        <input name="password" type="password" id="passwordInput" class="form-control" style="font-size : 0.8rem;">
                     </div>
-                    <br/>
                     <span for="passwordConfirmInput">비밀번호확인</span>
                     <div>
-                        <input name="passwordConfirm" type="password" id="passwordConfirmInput" class="form-control" style="font-size : 0.7rem;">
+                        <input name="passwordConfirm" type="password" id="passwordConfirmInput" class="form-control" style="font-size : 0.8rem;">
                     </div>
-                    <br/>
                     <span for="nicknameInput">사용할 닉네임</span>
                     <div style="display: flex;">
-                        <input name="nickname" id="nicknameInput" class="form-control" style="font-size : 0.7rem;">
-                        <button class="btn btn-secondary jung-btn" onclick="checkNicknameDuplicate('nicknameInput')" style="width : 160px; font-size: 0.7rem; margin-left : 17px;">중복체크</button>
+                        <input name="nickname" id="nicknameInput" class="form-control" style="font-size : 0.8rem;">
+                        <button class="btn btn-secondary jung-btn" onclick="checkNicknameDuplicate('nicknameInput')" style="width : 160px; font-size: 0.8rem; margin-left : 17px;">중복체크</button>
                     </div>
-                    <br/>
                     <span for="nameInput">성명</span>
                     <div>
-                        <input name="name" id="nameInput" class="form-control" style="font-size : 0.7rem;">
+                        <input name="name" id="nameInput" class="form-control" style="font-size : 0.8rem;">
                     </div>
-                    <br/>
                     <span for="birthInput">생년월일</span>
                     <div>
-                        <input name="birth" id="birthInput" autocomplete="off" class="form-control" style="font-size : 0.7rem;">
+                        <input name="birth" id="birthInput" autocomplete="off" class="form-control" style="font-size : 0.8rem;">
                     </div>
-                    <br/>
                     <span for="phoneInput">휴대폰</span>
                     <div style="display: flex;">
-                        <input name="phone" id="phoneInput" maxlength="13" class="form-control" style="font-size : 0.7rem;">
+                        <input name="phone" id="phoneInput" maxlength="13" class="form-control" style="font-size : 0.8rem;">
                         <button class="btn btn-secondary jung-btn" onclick="checkPhoneDuplicate('phoneInput')" style="width : 160px; font-size: 0.8rem; margin-left : 17px;">중복체크</button>
                     </div>
-                    <br/>
                     <span>주소</span>
                     <div>
                         <div style="display : flex;">
-                            <input name="zipcode" class="form-control zipcode"  placeholder="우편번호" style="font-size: 0.7rem;">
+                            <input name="zipcode" class="form-control zipcode"  placeholder="우편번호" style="font-size: 0.8rem;">
                             <button class="btn btn-secondary search_addr_btn" style="width : 160px; font-size: 0.7rem; margin-left : 17px;">주소검색</button>
                         </div>
 
-                        <input name="addr1" class="form-control addr1"  placeholder="기본주소" style="width : 330px; margin-top : 5px;font-size: 0.7rem;">
-                        <input name="addr2" class="form-control" placeholder="상세주소 입력" style="width : 330px; margin-top : 5px;font-size: 0.7rem;">
+                        <input name="addr1" class="form-control addr1"  placeholder="기본주소" style="width : 330px; margin-top : 5px;font-size: 0.8rem;">
+                        <input name="addr2" class="form-control" placeholder="상세주소 입력" style="width : 330px; margin-top : 5px;font-size: 0.8rem;">
                     </div>
-                    <br/>
                     <span for="questionInput">질문 선택</span>
                     <div>
-                        <select class="form-select" aria-label=".form-select-sm example" name="question" id="questionInput" style="font-size : 0.75rem;">
+                        <select class="form-select" aria-label=".form-select-sm example" name="question" id="questionInput" style="font-size : 0.8rem;">
                             <option value="질문1">당신의 어린시절 별명은?</option>
                             <option value="질문2">당신이 가장 존경하는 사람은?</option>
                             <option value="질문3">당신의 보물 제1호는?</option>
@@ -265,10 +261,9 @@
                             <option value="질문6">당신이 가장 즐겨하는 게임은?</option>
                         </select>
                     </div>
-                    <br/>
                     <span for="answerInput">답변</span>
                     <div style="margin-bottom : 20px;">
-                        <input name="answer" id="answerInput" type="text" class="form-control" style="font-size : 0.7rem;">
+                        <input name="answer" id="answerInput" type="text" class="form-control" style="font-size : 0.8rem;">
                     </div>
 
 
