--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -262,7 +262,7 @@
                             <!-- <span th:unless="${isLiked}">🖤</span> -->
                         </a>
                         <span class="like-count" data-board-number="${data.board.number}" th:text="${data.board.like_count}">like</span>
-                        <span style="font-size: 17px;">🗨️</span>
+                        <span style="font-size: 17px;margin-left : 25px;">🗨️</span>
                         <span class="reply-count" th:text="${data.cnt}">0</span>
 
                     </div>
