--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -31,6 +31,7 @@
 
         .Flist::-webkit-scrollbar {
             width: 0.4em; /* 수평 스크롤바 너비 */
+            display : none;
         }
 
         .Flist::-webkit-scrollbar-thumb {
