--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -359,6 +359,7 @@
                      } else {
                         heart.text('🖤');
                     }
+                    location.reload();
                 },
                 error: function() {
                     console.error('좋아요 업데이트 실패');
