--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -316,7 +316,7 @@
                 <div class="follow-box">
                     <a class="follower">
                         팔로워
-                        <span class="no" th:text="${cntFollowing}"></span>
+                        <span class="no" th:text="${cntFollower}"></span>
                     </a>
                     <a class="following">
                         팔로잉
