--- a/src/main/resources/templates/nampage.html
+++ b/src/main/resources/templates/nampage.html
@@ -316,11 +316,11 @@
                 <div class="follow-box">
                     <a class="follower">
                         팔로워
-                        <span class="no">100</span>
+                        <span class="no" th:text="${cntFollower}"></span>
                     </a>
                     <a class="following">
                         팔로잉
-                        <span class="no">100</span>
+                        <span class="no" th:text="${cntFollowing}"></span>
                     </a>
                 </div>
             </div>
