--- a/src/main/resources/templates/nampage.html
+++ b/src/main/resources/templates/nampage.html
@@ -80,6 +80,7 @@
             text-decoration: none;
             color: black;
             cursor : pointer;
+            height : 50px;
         }
 
         .follow-box>.follower{
