--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -7,6 +7,8 @@
     <!-- 부트스트랩 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 
     <!-- 구글폰트 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -161,7 +163,7 @@
     </div>
     <div class="offcanvas-body">
         <div id="notification-container">
-            <!-- 알림이 여기에 동적으로 추가 -->
+            <!-- 알림이 여기에 동적으로 추가될 것입니다. -->
         </div>
     </div>
 </div>
@@ -317,7 +319,7 @@
                     // 알림을 동적으로 생성하여 추가합니다.
                     const notificationElement = `
                         <div class="notification">
-                            <p>${notification.replyemail}</p>
+                            <p>${notification.replynickname}</p>
                             <p>${notification.message}</p>
                             <p>${notification.rdate}</p>
                         </div>
