--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -30,19 +30,35 @@
             margin : 2px;
         }
 
-        .Flist::-webkit-scrollbar {
-            width: 0.4em; /* 수평 스크롤바 너비 */
-            display : none;
-        }
 
-        .Flist::-webkit-scrollbar-thumb {
-            background-color: rgb(192, 192, 192);
-            border-radius: 15px;
-        }
+        .notification {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-top: 1px solid #ccc; /* 위쪽에만 줄 추가 */
+    border-bottom: 1px solid #ccc; /* 아래쪽에만 줄 추가 */
+    margin-bottom: 10px;
+    padding: 10px;
+}
 
-        .Flist::-webkit-scrollbar-track {
-            background: transparent;
-        }
+.notification p {
+    margin: 0;
+}
+
+.notification .email {
+    flex: 1;
+    margin-right: 10px;
+    font-weight: bold;
+}
+
+.notification .message {
+    flex: 2;
+    margin-right: 10px;
+}
+
+.notification .date {
+    flex: 1;
+}
 
     </style>
 </head>
